--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "lerna": "^4.0.0",
     "rollup": "^2.70.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.6.3"
   }
 }
