--- a/packages/image-grayscale-percentage/package.json
+++ b/packages/image-grayscale-percentage/package.json
@@ -5,7 +5,7 @@
   "author": "Jh <473380917@qq.com>",
   "homepage": "",
   "license": "MIT",
-  "main": "lib/image-grayscale-percentage.js",
+  "main": "dist/umd/image-grayscale-percentage.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,6 +17,7 @@
     "registry": "https://registry.npm.taobao.org/"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "build": "rollup -c"
   }
 }
