--- a/packages/image-grayscale-percentage/tsconfig.json
+++ b/packages/image-grayscale-percentage/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "declaration": true,
+    "declarationDir": "dist/umd",
+    "rootDir": "./"
   }
 }
