--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:pageages": "lerna run build"
+    "build:packages": "lerna run build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
     "lerna": "^4.0.0",
     "rollup": "^2.70.1",
+    "rollup-plugin-babel": "^4.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
   }
