--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "core-js": "^3.21.1",
     "lerna": "^4.0.0",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
