--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "core-js": "^3.21.1",
     "lerna": "^4.0.0",
+    "regenerator-runtime": "^0.13.9",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
     "tslib": "^2.3.1",
