--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.17.9",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "core-js": "^3.21.1",
     "lerna": "^4.0.0",
-    "regenerator-runtime": "^0.13.9",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
-  }
+  },
+  "dependencies": {}
 }
