build: add jest package for unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "experimentalDecorators": true,
     "strict": true,
     "downlevelIteration": true,
+    "types": ["jest","node"],
     "paths": {
       "@/*": ["./src/*"]
     }
