--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:packages": "lerna run build"
+    "build:packages": "lerna run build",
+    "test:packages": "lerna run test"
   },
   "author": "",
   "license": "ISC",
@@ -16,11 +17,14 @@
     "@babel/runtime": "^7.17.9",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "jest": "^27.5.1",
     "lerna": "^4.0.0",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
+    "ts-jest": "^27.1.4",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
-  },
-  "dependencies": {}
+  }
 }
