--- a/packages/image-grayscale-percentage/tsconfig.json
+++ b/packages/image-grayscale-percentage/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "dist/umd",
-    "rootDir": "./lib"
+    "rootDir": "./lib",
   }
 }
