--- a/packages/image-grayscale-percentage/package.json
+++ b/packages/image-grayscale-percentage/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "image-grayscale-percentage",
-  "version": "0.0.0",
+  "name": "image-grayscale-percentage-1",
+  "version": "0.0.1",
   "description": "> TODO: description",
   "author": "Jh <473380917@qq.com>",
   "homepage": "",
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npm.taobao.org/"
+    "registry": "https://registry.npm.org/"
   },
   "scripts": {
     "test": "jest",
