build: reuse configuration file

--- a/packages/image-grayscale-percentage/tsconfig.json
+++ b/packages/image-grayscale-percentage/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "declarationDir": "dist/umd",
+    "declarationDir": "dist/es",
     "rootDir": "./lib",
     "jsx": "react"
   }
