--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:packages": "lerna run build",
-    "test:packages": "lerna run test"
+    "test": "lerna run test"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,6 @@
     "@babel/runtime": "^7.17.9",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
