--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^17.0.23",
     "cross-env": "^7.0.3",
     "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.3.1",
     "rollup": "^2.70.1",
     "rollup-plugin-babel": "^4.4.0",
     "ts-jest": "^27.1.4",
