--- a/packages/image-grayscale-percentage/package.json
+++ b/packages/image-grayscale-percentage/package.json
@@ -18,5 +18,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "rollup -c"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.17.9",
+    "@babel/runtime-corejs3": "^7.17.9"
   }
 }
